<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ActivityRegister"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/userIcon_register"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/unknown" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose user icon"
                android:textSize="18sp"

                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_bold"/>
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/yourNameLabelResitration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/name_label"
            android:textColor="@color/black"
            android:textSize="18sp">
        </TextView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout1"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/text_area">

            <AutoCompleteTextView
                android:id="@+id/userNameTextAreaRegistration"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:layout_marginVertical="10sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_your_name"
                android:textColor="@color/registerAndSignInText"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/userIDLabelRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/user_id_label"
            android:textColor="@color/black"
            android:textSize="18sp">
        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/text_area">

            <AutoCompleteTextView
                android:id="@+id/userIDTextAreaRegistration"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:layout_marginVertical="10sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_user_id"
                android:textColor="@color/registerAndSignInText"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordLabelRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/password_label"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/text_area">

            <EditText
                android:id="@+id/passwordTextAreaRegistration"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:layout_marginVertical="10sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/registerAndSignInText"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordConfirmationLabelRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/password_confirmation_label"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextLayout4"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/text_area">


            <EditText
                android:id="@+id/passwordConfirmationTextAreaRegistration"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5sp"
                android:layout_marginVertical="10sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif"
                android:hint="@string/enter_password_again"
                android:inputType="textPassword"
                android:textColor="@color/registerAndSignInText"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/register_buttton"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/register_signIn_Button"
            android:textColor="@color/registerButton"
            android:textSize="20sp"
            android:onClick="register"/>


    </LinearLayout>










</LinearLayout>